# Machine-learning

./: README.md  basci-concepts.ipynb  computer_vision.py  hand_gesture.py  pyproject.toml
