[project]
name = "machine-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.5",
    "mediapipe>=0.10.14",
    "numpy>=2.3.2",
    "opencv-python>=4.11.0.86",
    "pyaudio>=0.2.14",
    "python-pptx>=1.0.2",
]
